maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:47: error: ';' expected but ')' found.
		if(virage==virageBase+4) || virage==virageBase-4)
                                                                ^